--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -72,15 +72,19 @@
   cursor: pointer;
   height: 30px;
 }
-
+.avatarWrapperHeader {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 2px solid white;
+  border-radius: 50%;
+  background: #fff;
+  display: inline-block;
+}
 .avatarNav {
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  max-width: 35px;
-  max-height: 35px;
-  border: 2px solid white;
-  background: #fff;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 768px) {
