--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -19,19 +19,23 @@
   width: 100%;
   height: 15%;
   margin-bottom: 10px;
-  /* background: var(--green-theme); */
-  /* background: #f3f7fa; */
   background-color: #222933;
   border-bottom: 1px solid white;
   color: white;
 }
-.avatarSidebar {
-  width: 50px;
-  height: 50px;
+.wrapperAvatarSidebar {
+  width: 2.7rem;
+  height: 2.7rem;
   border-radius: 50%;
   margin-right: 10px;
   border: 2px solid white;
   background: #fff;
+}
+.avatarSidebar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
 }
 .infoProfile {
   display: flex;
